src-tauri/build_errors_utf8.txt
cargo :     Checking ta
uri-appaudio-switcher v
0.1.0 (C:\閾ｪ菴懊・繝ｭ繧ｸ繧ｧ繧ｯ
繝・髻ｳ螢ｰ蜃ｺ蜉帛・繧頑崛縺・src-tau
ri)
発生場所 行:1 文字:1
+ cargo check 2> build_
errors.txt; powershell 
-Command "Get-Content b
ui ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 ta...繧頑崛縺・src-taur    
i):String) [], Rem    o
teException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
warning: unused import:
 `windows::Win32::Syste
m::Variant::*`
 --> src\audio_manager.
rs:8:5
  |
8 | use windows::Win32:
:System::Variant::*;
  |     ^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of `
#[warn(unused)]`) on by
 default

error[E0061]: this meth
od takes 1 argument but
 2 arguments were suppl
ied
    --> src\audio_manag
er.rs:57:46
     |
  57 |                 
        if let Ok(_) = 
store.GetValue(&pkey, &
mut prop) {
     |                 
                       
      ^^^^^^^^        -
-------- unexpected arg
ument #2 of type `&mut 
StructuredStorage::PROP
VARIANT`
     |
note: method defined he
re
    --> C:\Users\nofxy\
.cargo\registry\src\ind
ex.crates.io-1949cf8c6b
5b557f\windows-0.62.2\s
rc\Windows\Win32\UI\She
ll\PropertiesSystem\mod
.rs:2456:19
     |
2456 |     pub unsafe f
n GetValue(&self, key: 
*const super::super::su
per::Foundation::PROPER
TYKEY) -> windows_core:
:Result<super::super::s
uper::...
     |                 
  ^^^^^^^^
help: remove the extra 
argument
     |
  57 -                 
        if let Ok(_) = 
store.GetValue(&pkey, &
mut prop) {
  57 +                 
        if let Ok(_) = 
store.GetValue(&pkey) {
     |

warning: unused import:
 `windows::Win32::UI::S
hell::PropertiesSystem`
 --> src\audio_manager.
rs:6:5
  |
6 | use windows::Win32:
:UI::Shell::PropertiesS
ystem::*;
  |     ^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^

For more information ab
out this error, try `ru
stc --explain E0061`.
warning: `tauri-appaudi
o-switcher` (bin "tauri
-appaudio-switcher") ge
nerated 2 warnings
error: could not compil
e `tauri-appaudio-switc
her` (bin "tauri-appaud
io-switcher") due to 1 
previous error; 2 warni
ngs emitted
